--- a/Proyecto/stylesHome.css
+++ b/Proyecto/stylesHome.css
@@ -1,52 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
-body{
+body {
     height: 100vh;
     margin: 0;
-    font-family: "Montserrat", serif;
+    font-family: "Montserrat", sans-serif;
     background-color: #161627;
     color: white;
 }
 
-.food-container{
+.product-container {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin-left: 5%;
 }
 
-
-img{
+img {
     width: 60vh;
     height: 50vh;
 }
 
-.comment-container{
+.comment-container {
     display: flex;
     flex-direction: column;
     width: 60vw;
     padding: 10px;
 }
 
-textarea{
+textarea {
     margin-bottom: 10px;
-    font-size: 10px;
-    
+    font-size: 14px;
+    padding: 5px;
 }
 
-button{
+button {
     width: 50%;
     height: 5vh;
     margin-top: 7px;
     margin-left: 25%;
     cursor: pointer;
     border: none;
-    background-color: #161627 ;
+    background-color: #161627;
     color: white;
     border-radius: 15px;
 }
 
-button:hover{
+button:hover {
     background-color: #1f1f3d;
     transform: scale(1.05);
+}
+
+.comment {
+    background-color: white;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    color: black;
+    border-radius: 10px;
+    position: relative;
+}
+
+.user-image {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.delete-btn {
+    background-color: red;
+    color: white;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: 5px;
+}
+
+.delete-btn:hover {
+    background-color: darkred;
 }
